--- a/Academico/pom.xml
+++ b/Academico/pom.xml
@@ -6,6 +6,10 @@
     <artifactId>ladia</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+    <properties>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
